# task

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
cmake/: taskConfig.cmake.in
examples/: CMakeLists.txt
examples/asio/: CMakeLists.txt  main.cpp
include/mgutility/: task-inl.hpp  task.hpp
